--- a/ore.css
+++ b/ore.css
@@ -24,27 +24,22 @@
 
 
 
-nav {
-	list-style-type:none;
-	padding:0;
-	width: 100%;
-	text-align: center;
-	
-	
-}
+
 
 nav ul {
 	font-family: 'Calligraffitti', cursive;
 	font-size: 25px;
 	list-style-type: none;
 	overflow: hidden;
+	background-color: #000;
 	text-align: center;
 	width: 100%;
 	margin: auto;
+	/*padding: 25px;*/
 }
- 
+
 nav li {
-	color: #000;
+	color: #fff;
 	display: inline-block;
 	padding: 10px 40px;
 }
@@ -57,55 +52,13 @@ nav li a {
     text-decoration: none;
 }
 
-
 nav li a:hover {
-    background-color: #a2a2a2;
-	color: #000;
-}
-
-.supportnav ul {
-	font-family: 'Calligraffitti', cursive;
-	font-size: 25px;
-	list-style-type: none;
-	overflow: hidden;
-	background-color: #000;
-	text-align: center;
-	width: 100%;
-	margin: auto;
-	/*padding: 25px;*/
-}
-
-.supportnav li {
-	color: #fff;
-	display: inline-block;
-	padding: 10px 40px;
-}
-
-.supportnav li a {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-.supportnav li a:hover {
     background-color: #000;
 	color: #fff;
 }
 
 
 
-
-@media screen and (max-width : 760px){
-
-	li {
-		margin-bottom: 1px;
-	}
-	ul li, li a {
-		width: 100%;
-	}
-}
 
 /* END Nav*/ 
 
@@ -134,41 +87,13 @@ overflow: visible;
 
 /*Slideshow*/
 
-/* Slideshow container */
-.slideshow-row {
-  min-width: 45%;
-  max-width: 45%;
-  position: relative;
-  margin: auto;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
 
 /* Caption text */
+
+.slideshow {
+	padding-left: 0;
+	padding-right: 0;
+}
 .text {
   color: #000;
   font-size: 15px;
@@ -179,30 +104,6 @@ overflow: visible;
   text-align: center;
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor:pointer;
-  height: 13px;
-  width: 13px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
 
 /* Fading animation */
 .fade {
@@ -225,6 +126,8 @@ overflow: visible;
 .sidetext {
 	font-family: 'Roboto', sans-serif;
 	padding-top: 40px;
+	text-align: center;
+	padding-left: 0;
 }
 
 .sidetext h1 {
@@ -234,6 +137,7 @@ overflow: visible;
 
 .sidetext ul {
 	font-size: 20px;
+	list-style-type: none;
 }
 
 /* Scroller */
@@ -356,14 +260,14 @@ div.desc {
 }
 
 #mailer {
-	border: solid 1px black;
+	border: solid 1px white;
 	width: 45%;
 	margin-left: 8%;
 }
-#message {
-	
-	height: 100%;
-	margin: 1% 5% 0;
+
+.contact {
+	background-image: url("./images/rocks2.jpg");
+    background-size: cover;
 	
 }
 
@@ -371,10 +275,12 @@ form.email p {
 font-size: 15px;
 padding: 0 0 10px 0;
 margin: 0;
+color: #fff;
 }
 
 form.email input, form.email textarea {
 font-family: Arial;
+color: #fff;
 font-size: 15px;
 margin: 0 0 20px 0;
 }
@@ -414,7 +320,6 @@ footer {
   padding-right:40px;
   padding-left: 0px;
   color:#ccc;
-  width: 100%;
   background-color: #000;
  
 }
