--- a/ore.css
+++ b/ore.css
@@ -228,6 +228,30 @@ overflow: visible;
 }
 /*Gallery*/
 
+#overlay {
+	background: rgba(0,0,0,0.7);
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	display: none;
+	text-align: center;
+}
+
+#overlay img {
+	position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#overlay p {
+	color: #fff;
+	font-size: 20px;
+	margin-top: 40%;
+}
+
 section.gal {
 	margin: 50px auto;
 	height: 200px;
